--- a/Jokenpo-Navegador/style.css
+++ b/Jokenpo-Navegador/style.css
@@ -14,6 +14,21 @@ body{
 }
 
 
+#Tesoura{
+  background-image:url("test/Tesoura.png");
+  padding: 64px;
+  background-color: rgba(240, 248, 255, 0);
+}
+#Pedra{
+  background-image:url("test/Rock.png");
+  padding: 64px;
+  background-color: rgba(240, 248, 255, 0);
+}
+#Papel{
+  background-image:url("test/Papel.png");
+  padding: 64px;
+  background-color: rgba(240, 248, 255, 0);
+}
 .chosePvp,.chosePvb{
     display: flex;
     padding: 25px;
@@ -23,19 +38,22 @@ body{
     border-radius: 25px;
     color: white;
 }
+#Papel:hover,
+#Pedra:hover,
+#Tesoura:hover,
 #enviarNomeDoPlayer1:hover,
 #pgInicial:hover,
 .chosePvb:hover,
 .chosePvp:hover{
-  transform: scale(1.2);
+  transform: scale(1.1);
 }
 #enviarNomeDoPlayer1,
 #pgInicial,
-#papel,
-#pedra,
-#tesoura,
-.chosePvb,
-.chosePvp{
+#Papel,
+#Pedra,
+#Tesoura,
+#pvpButton,
+#pvbButton{
   transition: transform 0.3s;
 }
 
@@ -51,6 +69,9 @@ body{
   display: none;
 }
 #jogar{
+  display: none;
+}
+#resutadoFinalPvb{
   display: none;
 }
 
@@ -75,10 +96,13 @@ body{
   padding-right: 30px;
 }
 #papel:hover,
-#pedra:hover,
+#rock:hover,
 #tesoura:hover{
   transform: scale(1.2);
   border: 3px solid;
   border-color: rgb(21, 255, 0);
 }
 
+#resutadoFinalPvb{
+  font-family: 'Comicsans', sans-serif;
+}
