--- a/Jokenpo-Navegador copy/style.css
+++ b/Jokenpo-Navegador copy/style.css
@@ -1,80 +1,101 @@
 * {
-    margin-bottom: 30px;
-    padding: 0;
-    box-sizing: border-box;
-  }
-
+  margin-bottom: 30px;
+  padding: 0;
+  box-sizing: border-box;
+}
 body{
-     width: fit-content;
-     margin: auto;
-     padding-top: 52px;
-    background: rgb(142,209,252);
-    background: linear-gradient(90deg, rgba(98,138,255,1) 0%, rgb(63, 255, 178) 100%);
-
+   width: fit-content;
+   margin: auto;
+   padding-top: 52px;
+  background: rgb(142,209,252);
+  background: linear-gradient(90deg, rgba(98,138,255,1) 0%, rgb(63, 255, 178) 100%);
 }
-
-
+#Tesoura{
+background-image:url("test/Tesoura.png");
+padding: 64px;
+background-color: rgba(240, 248, 255, 0);
+}
+#Pedra{
+background-image:url("test/Rock.png");
+padding: 64px;
+background-color: rgba(240, 248, 255, 0);
+}
+#Papel{
+background-image:url("test/Papel.png");
+padding: 64px;
+background-color: rgba(240, 248, 255, 0);
+}
 .chosePvp,.chosePvb{
-    display: flex;
-    padding: 25px;
-    text-align: center;
-    
-    background-color: rgb(7, 7, 7);
-    border-radius: 25px;
-    color: white;
+  display: flex;
+  padding: 25px;
+  text-align: center;
+  
+  background-color: rgb(7, 7, 7);
+  border-radius: 25px;
+  color: white;
 }
+#Papel:hover,
+#Pedra:hover,
+#Tesoura:hover,
 #enviarNomeDoPlayer1:hover,
 #pgInicial:hover,
-#papel:hover,
-#pedra:hover,
-#tesoura:hover,
 .chosePvb:hover,
 .chosePvp:hover{
-  transform: scale(1.2);
+transform: scale(1.1);
 }
 #enviarNomeDoPlayer1,
 #pgInicial,
-#papel,
-#pedra,
-#tesoura,
-.chosePvb,
-.chosePvp{
-  transition: transform 0.3s;
+#Papel,
+#Pedra,
+#Tesoura,
+#pvpButton,
+#pvbButton{
+transition: transform 0.3s;
 }
-
 #opções{
-  display: none;
-  margin: 20x;
+display: none;
+margin: 20x;
 }
 #nomeDosJogadores{
-  display: none;
-  align-items: center;
+display: none;
+align-items: center;
 }
 #pgInicial{
-  display: none;
+display: none;
 }
-#JogarPvb{
-  display: none;
+#jogar{
+display: none;
 }
-
+#resutadoFinalPvb{
+display: none;
+}
 @keyframes appear {
-  0% {
-    transform: translateX(-120px);
-    opacity: 0;
-  }
-
-  100% {
-    opacity: 1;
-  }
+0% {
+  transform: translateX(-120px);
+  opacity: 0;
+}
+100% {
+  opacity: 1;
+}
+}
+#colocarNome,#pgInicial,#enviarNomeDoPlayer1,#jogar{
+font-family: 'Comicsans', sans-serif;
+background-color: rgb(254, 254, 254);
+border-color: rgb(7, 7, 7);
+border-radius: 15px;
+padding: 4px;
+padding-left: 30px;
+padding-right: 30px;
+}
+#papel:hover,
+#rock:hover,
+#tesoura:hover{
+transform: scale(1.2);
+border: 3px solid;
+border-color: rgb(21, 255, 0);
 }
 
-#colocarNomeDoPlayer1,#pgInicial,#enviarNomeDoPlayer1{
-  font-family: 'Comicsans', sans-serif;
-  background-color: rgb(254, 254, 254);
-  border-color: rgb(7, 7, 7);
-  border-radius: 15px;
-  padding: 4px;
-  padding-left: 30px;
-  padding-right: 30px;
-}
 
+#resutadoFinalPvb{
+font-family: 'Comicsans', sans-serif;
+}
