--- a/Cliker-game/Como-jogar/style.css
+++ b/Cliker-game/Como-jogar/style.css
@@ -5,7 +5,7 @@ body{
 p{
     color: rgb(255, 255, 255);
     font-family: 'Press Start 2P';
-    font-size: 12px;
+    font-size: 13px;
     
     padding: 10px;
     margin-bottom: 10px;
@@ -37,4 +37,22 @@ span{
     padding: 10px;
     margin-bottom: 10px;
     height: auto;
+}
+
+@media screen and (max-width: 640px) {
+    span{
+        font-size: 10px;
+        padding: 10px;
+    }
+    h1{
+        color: rgb(255, 255, 255);
+        font-family: 'Press Start 2P';
+        font-size: 10px;
+    }
+    p{
+        color: rgb(255, 255, 255);
+        font-family: 'Press Start 2P';
+        font-size: 10px;
+        padding: 5px;
+    }
 }
