--- a/Cliker-game/style.css
+++ b/Cliker-game/style.css
@@ -30,6 +30,7 @@
 
   #DeterminacaoPng{
     width: 100px;
+    animation: show;
   }
   #Pacience,#Bondade,#Bravura,#Justice,#Perseverança,#Integridade{
     width: 50px;
@@ -43,7 +44,7 @@
     border: 3px solid rgb(255, 255, 0);
   }
   #DeterminacaoPng:hover{
-    transform: scale(1.2);
+    transform: scale(1.1);
     transition: transform 0.4s;
   }
   p{
@@ -125,5 +126,25 @@
       justify-content: center;
       align-items: center;
     }
+    }
+    .ShowClick{
+      color: rgb(255, 255, 255);
+    font-family: 'Press Start 2P';
+    font-size: 13px;
+    border: none;
+    opacity: 0;
     
+    }
+
+    @keyframes show{
+      from {
+        opacity: 1;
+        transform: translate3d(0,48px,0);
+        color: red;
+      }
+      to {
+        opacity: 0;
+        transform: translate3d(0,-58px,0);
+        color: white;
+      }
     }
