--- a/Cliker-game/style.css
+++ b/Cliker-game/style.css
@@ -43,7 +43,7 @@
     transition: transform 0.4s;
     border: 3px solid rgb(255, 255, 0);
   }
-  #DeterminacaoPng:hover{
+  #DeterminacaoPng{
     transform: scale(1.1);
     transition: transform 0.4s;
   }
@@ -108,7 +108,7 @@
     align-items: flex-end;
   }
 
-  @media screen and (max-width: 520px) {
+  @media screen and (max-width: 600px) {
     #Pacience,#Bondade,#Bravura,#Justice,#Perseverança,#Integridade{
       width: 50px;
       border: 3px solid white;
@@ -130,21 +130,47 @@
     .ShowClick{
       color: rgb(255, 255, 255);
     font-family: 'Press Start 2P';
-    font-size: 13px;
+    font-size: 14px;
     border: none;
     opacity: 0;
     
     }
 
-    @keyframes show{
+    @keyframes AnimationClickNumber{
       from {
         opacity: 1;
-        transform: translate3d(0,48px,0);
+        transform: translate3d(0,40px,0);
         color: red;
       }
       to {
         opacity: 0;
         transform: translate3d(0,-58px,0);
         color: white;
+        
+      }
+    }
+
+    @keyframes AnimationClickCoracao{
+      from {
+        transform: translate3d(0,0,0);
+        color: red;
+        transform: scale(1.3);
+        filter: blur(5px)
+      }
+      to {
+        transform: translate3d(0,0,0);
+        color: white;
+        
+      }
+    }
+    
+    @keyframes AnimationContador{
+      from {
+        font-size: 14px;
+        color: rgb(255, 100, 100);
+      }
+      to {
+        font-size: 16px;
+        color: red;
       }
     }
