--- a/Cliker-game/style.css
+++ b/Cliker-game/style.css
@@ -120,7 +120,7 @@
     font-size: 8px;
   }
 
-  #ComoJogar,#Zerar,#TituloUpgrade{
+  #ComoJogar,#Reset,#TituloUpgrade{
     color: rgb(255, 255, 255);
     font-family: 'Press Start 2P';
     border: 3px solid rgb(255, 255, 255);
@@ -129,7 +129,7 @@
     font-size: 15px;
     text-align: center;
   }
-  #TituloUpgrade:hover,#ComoJogar:hover,#Zerar:hover{
+  #TituloUpgrade:hover,#ComoJogar:hover,#Reset:hover{
     color: rgb(255, 247, 0);
     font-family: 'Press Start 2P';
     border: 3px solid rgb(255, 247, 0);
@@ -217,6 +217,7 @@
     }
 
     }
+    
     .ShowClick{
       color: rgb(255, 255, 255);
     font-family: 'Press Start 2P';
@@ -273,12 +274,19 @@
       to {
         font-size: 16px;
         color: red;
+        
+      }
+    }
+    
+    @keyframes ResetAnimation{
+      from{
+        opacity:1;
+      }
+      to{
+        opacity:0;
       }
     }
 
-    #Buttons{
-      flex-direction: column;
-      justify-content: space-between;
-      
-      
-    }
+#Fundo{
+  background-color: black
+}
